--- a/exo.html
+++ b/exo.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" src=""/>
-		<title>ExoBash</title>
+		<title>ExoBashketball</title>
 	</head>
 	<body>
 		COMMIT
